引入knockout-go sdk api; 简化目录结构以便加强单元测试
