# api/oas/auth/handler.go
@@ -1,17 +1,17 @@
 // Code generated by woco, DO NOT EDIT.
 
-package server
+package auth
 
 import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/tsingsun/woocoo/pkg/gds"
 	"github.com/tsingsun/woocoo/web/handler"
-	"github.com/woocoos/knockout/api/oas"
 )
 
 // RegisterAuthHandlers creates http.Handler with routing matching OpenAPI spec.
-func RegisterAuthHandlers(router *gin.RouterGroup, si oas.AuthServer) {
+func RegisterAuthHandlers(router *gin.RouterGroup, si AuthServer) {
 	router.POST("/mfa/bind", wrapBindMfa(si))
 	router.POST("/mfa/bind-prepare", wrapBindMfaPrepare(si))
 	router.GET("/captcha", wrapCaptcha(si))
@@ -31,20 +31,10 @@ func RegisterAuthHandlers(router *gin.RouterGroup, si oas.AuthServer) {
 	router.POST("/login/verify-factor", wrapVerifyFactor(si))
 }
 
-// RegisterFileHandlers creates http.Handler with routing matching OpenAPI spec.
-func RegisterFileHandlers(router *gin.RouterGroup, si oas.FileServer) {
-	router.DELETE("/files/:fileId", wrapDeleteFile(si))
-	router.GET("/files/:fileId", wrapGetFile(si))
-	router.GET("/files/:fileId/raw", wrapGetFileRaw(si))
-	router.POST("/files/report-ref-count", wrapReportRefCount(si))
-	router.POST("/files", wrapUploadFile(si))
-	router.POST("/files/upload-info", wrapUploadFileInfo(si))
-}
-
-func wrapBindMfa(si oas.AuthServer) func(c *gin.Context) {
+func wrapBindMfa(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.BindMfaRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req BindMfaRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -57,7 +47,7 @@ func wrapBindMfa(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapBindMfaPrepare(si oas.AuthServer) func(c *gin.Context) {
+func wrapBindMfaPrepare(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		resp, err := si.BindMfaPrepare(c)
 		if err != nil {
@@ -68,10 +58,13 @@ func wrapBindMfaPrepare(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapCaptcha(si oas.AuthServer) func(c *gin.Context) {
+func wrapCaptcha(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.CaptchaRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		req := CaptchaRequest{
+			W: gds.Ptr(int(200)),
+			H: gds.Ptr(int(100)),
+		}
+		if err := c.ShouldBindQuery(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -84,7 +77,7 @@ func wrapCaptcha(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapCreateSpm(si oas.AuthServer) func(c *gin.Context) {
+func wrapCreateSpm(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		resp, err := si.CreateSpm(c)
 		if err != nil {
@@ -95,10 +88,10 @@ func wrapCreateSpm(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapForgetPwdBegin(si oas.AuthServer) func(c *gin.Context) {
+func wrapForgetPwdBegin(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ForgetPwdBeginRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req ForgetPwdBeginRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -111,10 +104,10 @@ func wrapForgetPwdBegin(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapForgetPwdReset(si oas.AuthServer) func(c *gin.Context) {
+func wrapForgetPwdReset(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ForgetPwdResetRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req ForgetPwdResetRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -127,9 +120,9 @@ func wrapForgetPwdReset(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapForgetPwdSendEmail(si oas.AuthServer) func(c *gin.Context) {
+func wrapForgetPwdSendEmail(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ForgetPwdSendEmailRequest
+		var req ForgetPwdSendEmailRequest
 		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
@@ -143,10 +136,10 @@ func wrapForgetPwdSendEmail(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapForgetPwdVerifyEmail(si oas.AuthServer) func(c *gin.Context) {
+func wrapForgetPwdVerifyEmail(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ForgetPwdVerifyEmailRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req ForgetPwdVerifyEmailRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -159,10 +152,10 @@ func wrapForgetPwdVerifyEmail(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapForgetPwdVerifyMfa(si oas.AuthServer) func(c *gin.Context) {
+func wrapForgetPwdVerifyMfa(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ForgetPwdVerifyMfaRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req ForgetPwdVerifyMfaRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -175,9 +168,9 @@ func wrapForgetPwdVerifyMfa(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapGetSpmAuth(si oas.AuthServer) func(c *gin.Context) {
+func wrapGetSpmAuth(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.GetSpmAuthRequest
+		var req GetSpmAuthRequest
 		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
@@ -191,10 +184,10 @@ func wrapGetSpmAuth(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapLogin(si oas.AuthServer) func(c *gin.Context) {
+func wrapLogin(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.LoginRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req LoginRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -207,7 +200,7 @@ func wrapLogin(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapLogout(si oas.AuthServer) func(c *gin.Context) {
+func wrapLogout(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		err := si.Logout(c)
 		if err != nil {
@@ -217,9 +210,9 @@ func wrapLogout(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapRefreshToken(si oas.AuthServer) func(c *gin.Context) {
+func wrapRefreshToken(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.RefreshTokenRequest
+		var req RefreshTokenRequest
 		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
@@ -233,10 +226,10 @@ func wrapRefreshToken(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapResetPassword(si oas.AuthServer) func(c *gin.Context) {
+func wrapResetPassword(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.ResetPasswordRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req ResetPasswordRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -249,10 +242,10 @@ func wrapResetPassword(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapToken(si oas.AuthServer) func(c *gin.Context) {
+func wrapToken(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.TokenRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
+		var req TokenRequest
+		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
@@ -265,9 +258,9 @@ func wrapToken(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapUnBindMfa(si oas.AuthServer) func(c *gin.Context) {
+func wrapUnBindMfa(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.UnBindMfaRequest
+		var req UnBindMfaRequest
 		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
@@ -281,109 +274,14 @@ func wrapUnBindMfa(si oas.AuthServer) func(c *gin.Context) {
 	}
 }
 
-func wrapVerifyFactor(si oas.AuthServer) func(c *gin.Context) {
+func wrapVerifyFactor(si AuthServer) func(c *gin.Context) {
 	return func(c *gin.Context) {
-		var req oas.VerifyFactorRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		resp, err := si.VerifyFactor(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
-	}
-}
-
-func wrapDeleteFile(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.DeleteFileRequest
-		if err := c.ShouldBindUri(&req.UriParams); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		err := si.DeleteFile(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-	}
-}
-
-func wrapGetFile(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.GetFileRequest
-		if err := c.ShouldBindUri(&req.UriParams); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		resp, err := si.GetFile(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
-	}
-}
-
-func wrapGetFileRaw(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.GetFileRawRequest
-		if err := c.ShouldBindUri(&req.UriParams); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		resp, err := si.GetFileRaw(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-		c.Data(http.StatusOK, "application/octet-stream", resp)
-	}
-}
-
-func wrapReportRefCount(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.ReportRefCountRequest
+		var req VerifyFactorRequest
 		if err := c.ShouldBind(&req); err != nil {
 			handler.AbortWithError(c, http.StatusBadRequest, err)
 			return
 		}
-		resp, err := si.ReportRefCount(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
-	}
-}
-
-func wrapUploadFile(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.UploadFileRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		resp, err := si.UploadFile(c, &req)
-		if err != nil {
-			c.Error(err)
-			return
-		}
-		handler.NegotiateResponse(c, http.StatusOK, resp, []string{"application/json"})
-	}
-}
-
-func wrapUploadFileInfo(si oas.FileServer) func(c *gin.Context) {
-	return func(c *gin.Context) {
-		var req oas.UploadFileInfoRequest
-		if err := c.ShouldBind(&req.Body); err != nil {
-			handler.AbortWithError(c, http.StatusBadRequest, err)
-			return
-		}
-		resp, err := si.UploadFileInfo(c, &req)
+		resp, err := si.VerifyFactor(c, &req)
 		if err != nil {
 			c.Error(err)
 			return
