# api/oas/model.go
@@ -1,96 +1,0 @@
-// Code generated by woco, DO NOT EDIT.
-
-package oas
-
-import "time"
-
-type Captcha struct {
-	CaptchaId    string `json:"captchaId,omitempty"`
-	CaptchaImage string `json:"captchaImage,omitempty"`
-}
-
-type Domain struct {
-	ID   int    `json:"id,omitempty"`
-	Name string `json:"name,omitempty"`
-}
-
-type Error struct {
-	Code    int    `json:"code,omitempty"`
-	Details string `json:"details,omitempty"`
-	Message string `json:"message,omitempty"`
-}
-
-type ErrorResponse struct {
-	Errors []*Error `json:"errors,omitempty"`
-}
-
-type FileInfo struct {
-	FileSource *FileSource `json:"FileSource,omitempty"`
-	CreatedAt  time.Time   `json:"createdAt,omitempty" time_format:"2006-01-02T15:04:05Z07:00"`
-	ID         string      `json:"id,omitempty"`
-	Name       string      `json:"name,omitempty"`
-	Path       string      `json:"path,omitempty"`
-	Size       int         `json:"size,omitempty"`
-}
-
-type FileInput struct {
-	MineType string `binding:"required" json:"mine_type"`
-	Name     string `binding:"required" json:"name"`
-	Path     string `binding:"required" json:"path"`
-	Size     int    `binding:"required" json:"size"`
-}
-
-type FileRefInput struct {
-	FileId int    `binding:"required" json:"fileId"`
-	OpType string `binding:"required" json:"opType"`
-}
-
-type FileSource struct {
-	Bucket   string `json:"bucket,omitempty"`
-	Endpoint string `json:"endpoint,omitempty"`
-	ID       int    `json:"id,omitempty"`
-	Kind     string `json:"kind,omitempty"`
-	Region   string `json:"region,omitempty"`
-}
-
-type FileSourceInput struct {
-	Bucket   string `binding:"required" json:"bucket"`
-	Endpoint string `binding:"required" json:"endpoint"`
-	Kind     string `binding:"required" json:"kind"`
-	Region   string `binding:"required" json:"region"`
-}
-
-type ForgetPwdBeginResponse struct {
-	StateToken    string             `json:"stateToken,omitempty"`
-	StateTokenTTL float64            `json:"stateTokenTTL,omitempty"`
-	Verifies      []*ForgetPwdVerify `json:"verifies,omitempty"`
-}
-
-type ForgetPwdVerify struct {
-	Kind  string `json:"kind,omitempty"`
-	Value string `json:"value,omitempty"`
-}
-
-type LoginResponse struct {
-	AccessToken  string `json:"accessToken,omitempty"`
-	CallbackUrl  string `json:"callbackUrl,omitempty"`
-	ExpiresIn    int    `json:"expiresIn,omitempty"`
-	RefreshToken string `json:"refreshToken,omitempty"`
-	StateToken   string `json:"stateToken,omitempty"`
-	User         *User  `json:"user,omitempty"`
-}
-
-type Mfa struct {
-	PrincipalName string  `json:"principalName,omitempty"`
-	QrCodeUri     string  `json:"qrCodeUri,omitempty"`
-	Secret        string  `json:"secret,omitempty"`
-	StateToken    string  `json:"stateToken,omitempty"`
-	StateTokenTTL float64 `json:"stateTokenTTL,omitempty"`
-}
-
-type User struct {
-	AvatarFileId int       `json:"avatarFileId,omitempty"`
-	DisplayName  string    `json:"displayName,omitempty"`
-	Domains      []*Domain `json:"domains,omitempty"`
-	ID           int       `json:"id,omitempty"`
-}
